TEST_PROGRAMS/VALID/07/var_decl_function.go
package main
var d = math.Sin(0.5)  // d is float64
