TEST_PROGRAMS/INVALID/04/20.go
package main

func main() {
    //Illegal identifier
    var 0_or_1 = 2
}
